--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <ul>
           <li><a href="#home">home</a></li>
           <li><a href="#about">about</a></li>
-          <li><a href="#service">services</a></li>
-          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#service">chairman</a></li>
+          <li><a href="#portfolio">marketing manager</a></li>
           <li><a href="#team">team</a></li>
           <li><a href="careers.html">career</a></li>
           <li><a href="#contact">contact</a></li>
