--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunrise HR Solution</title>
+
+    <!-- external css link inserted -->
     <link rel="stylesheet" href="./css/style.css" />
+
+    <!-- bootstrap cdn link inserted by shibu -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+
+    <!-- favicon inserted  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="icon" href="./images/image.png" />
+    <link rel="icon" href="./images/Logo.jpg" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
@@ -40,7 +49,8 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo"><img src="./images/image.png" alt="" /></a>
+      <!-- copany's logo inserted -->
+      <a href="#" class="logo"><img src="./images/Logo.jpg" alt="" /></a>
       <div class="fas fa-bars"></div>
       <nav class="navbar">
         <ul>
@@ -49,7 +59,7 @@
           <li><a href="#service">chairman</a></li>
           <li><a href="#portfolio">marketing manager</a></li>
           <li><a href="#team">team</a></li>
-          <li><a href="careers.html">career</a></li>
+          <li><a href="careers.html">categories</a></li>
           <li><a href="#contact">contact</a></li>
           <li><a href="#faq">FAQ</a></li>
         </ul>
@@ -512,8 +522,15 @@
           </div>
         </div>
       </div>
+      <!-- download button added  -->
+      <div class="btn">
+          <a href="/images/pandahumanresource.pdf" download class="btn btn-primary">Download Brochure
+            <i class="fa fa-download"></i>
+          </a>
+      </div>
     </section>
 
+<!-- footer started -->
     <div class="footer">
       <div class="footer-top">
         <div class="container">
