--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <link rel="stylesheet" href="./css/style.css" />
 
     <!-- bootstrap cdn link inserted by shibu -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
 
     <link
       rel="stylesheet"
@@ -49,7 +54,6 @@
   </head>
   <body>
     <header class="header">
-      <!-- copany's logo inserted -->
       <a href="#" class="logo"><img src="./images/Logo.jpg" alt="" /></a>
       <div class="fas fa-bars"></div>
       <nav class="navbar">
@@ -57,7 +61,7 @@
           <li><a href="#home">home</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#service">chairman</a></li>
-          <li><a href="#portfolio">marketing manager</a></li>
+          <li><a href="#portfolio">manager</a></li>
           <li><a href="#team">team</a></li>
           <li><a href="careers.html">categories</a></li>
           <li><a href="#contact">contact</a></li>
@@ -100,26 +104,27 @@
           </div>
           <div class="col-lg-4 col-lg-12">
             <div class="item">
-              <span class="icon feature_box_col_one"
-                ><i class="fa fa-laptop"></i
-              ></span>
+              <div class="testimonial-img">
+                <img src="./images/chairman.jpg" alt="Chairman image" />
+              </div>
+              <br />
               <h6>Mr. Raj Kumar Lamsal</h6>
               <h3>Chairman</h3>
               <p>
-                Our Custom Web Development Services Include Both Front-End And
-                Back-End Development. Whether It Is Enhancing An Existing App Or
-                Architecting An Enterprise App, Our Developers Are Up For The
-                Challenge.Lorem ipsum dolor sit amet, consectetuer adipiscing
-                elit. Aenean commodo ligula eget dolor Aenean massa.Lorem ipsum
-                dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                ligula eget dolor Aenean massa.Lorem ipsum dolor sit amet,
-                consectetuer adipiscing elit. Aenean commodo ligula eget dolor
-                Aenean massa.Lorem ipsum dolor sit amet, consectetuer adipiscing
-                elit. Aenean commodo ligula eget dolor Aenean massa.Lorem ipsum
-                dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-                ligula eget dolor Aenean massa.Lorem ipsum dolor sit amet,
-                consectetuer adipiscing elit. Aenean commodo ligula eget dolor
-                Aenean massa.<br />
+                It gives me immense pleasure to introduce my company, Sunrise HR
+                Solution Pvt. Ltd., as one of the leading manpower company
+                amongst many in Nepal. From ensuring our clients’ satisfaction
+                to providing opportunities to potential Nepalese manpower
+                candidates for better prospects, our aim is to build enduring
+                partnerships. And the key to building a partnership is to
+                provide competitive business solutions. With outstanding staffs
+                and implementation of innovative processes, we are very well
+                equipped to handle the demands of our clients. Employment
+                prospects create more opportunities for social upliftment and we
+                intend to work towards the betterment of Nepalese society.
+                Lastly, I would like to extend my gratitude to all our partners
+                without whom our work would not have been possible. Thank you,
+                for choosing us. We look forward to taking a new step.<br />
               </p>
             </div>
           </div>
@@ -142,22 +147,22 @@
       <div class="container">
         <div>
           <i class="far fa-clock fa-4x"></i>
-          <div class="counter" data-target="13500">0</div>
+          <div class="counter" data-target="24">0</div>
           <h3>Working Hours</h3>
         </div>
         <div>
           <i class="fas fa-gift fa-4x"></i>
-          <div class="counter" data-target="720">0</div>
-          <h3>Completed Projects</h3>
+          <div class="counter" data-target="120">0</div>
+          <h3>Happy Companies</h3>
         </div>
         <div>
           <i class="fas fa-users fa-4x"></i>
-          <div class="counter" data-target="480">0</div>
-          <h3>Happy Clients</h3>
+          <div class="counter" data-target="521">0</div>
+          <h3>Happy Employees</h3>
         </div>
         <div>
           <i class="fas fa-award fa-4x"></i>
-          <div class="counter" data-target="120">0</div>
+          <div class="counter" data-target="20">0</div>
           <h3>Awards Received</h3>
         </div>
       </div>
@@ -174,25 +179,23 @@
 
           <div class="col-lg-8 col-lg-12">
             <div class="item">
-              <span class="icon feature_box_col_four"
-                ><i class="fa fa-database"></i
-              ></span>
+              <div class="testimonial-img">
+                <img
+                  src="./images/manager2.jpg"
+                  alt="International Marketing Manager image"
+                />
+              </div>
+              <br />
               <h6>Mr. Souraj Rai</h6>
               <h3>International Marketing Manager</h3>
 
               <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-                commodo ligula eget dolor Aenean massa.Lorem ipsum dolor sit
-                amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                dolor Aenean massa.Lorem ipsum dolor sit amet, consectetuer
-                adipiscing elit. Aenean commodo ligula eget dolor Aenean
-                massa.Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Aenean commodo ligula eget dolor Aenean massa.Lorem ipsum dolor
-                sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                eget dolor Aenean massa.Lorem ipsum dolor sit amet, consectetuer
-                adipiscing elit. Aenean commodo ligula eget dolor Aenean
-                massa.Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                Aenean commodo ligula eget dolor Aenean massa.<br />
+                It has been our aim at Sunrise HR Solution to provide
+                employement oppurtunity to the Nepalese in world class comapnies
+                that have partenered and trusted our services. I feel great joy
+                to be part of this process of uplifting the Nepalese society and
+                be a facilitator for the Nepali dream to work in a great
+                international company.<br />
               </p>
             </div>
           </div>
@@ -203,7 +206,6 @@
     <div class="communicate">
       <h3>Want to hire world-class personnel</h3>
       <p>Want to work is great foreign companies</p>
-      <a href="#contact"><button class="btn">Contact Now</button></a>
     </div>
 
     <div class="testimonials mt-100">
@@ -305,14 +307,11 @@
       <div class="row">
         <div class="card">
           <div class="image">
-            <img
-              src="./images/pexels-andrea-piacquadio-845434.jpg"
-              alt="Team member 1"
-            />
+            <img src="./images/chairman.jpg" alt="chairman" />
           </div>
           <div class="info">
-            <h3>Schott Watkins</h3>
-            <span>Web Developer</span>
+            <h3>Mr. Raj Kumar Lamsal</h3>
+            <span>Chairman</span>
             <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -326,13 +325,13 @@
         <div class="card">
           <div class="image">
             <img
-              src="./images/pexels-vinicius-wiesehofer-1130624.jpg"
-              alt="Team member 1"
+              src="./images/manager2.jpg"
+              alt="International Marketing Manager"
             />
           </div>
           <div class="info">
-            <h3>Nicole Bell</h3>
-            <span>Mobile Developer</span>
+            <h3>Mr. Souraj Rai</h3>
+            <span>Internaional Maeketing Manager</span>
             <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -352,7 +351,7 @@
           </div>
           <div class="info">
             <h3>John Doe</h3>
-            <span>Graphic Designer</span>
+            <span>Technical Officer</span>
             <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -372,7 +371,7 @@
           </div>
           <div class="info">
             <h3>Rose Matthews</h3>
-            <span>Web Designer</span>
+            <span>Receptionist</span>
             <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -391,14 +390,14 @@
       <div class="contact-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30711243.17762776!2d64.4398422293091!3d20.011408266548177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1644684739958!5m2!1sen!2sin"
-          width="100%"
+          width="80%"
           height="auto"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
         ></iframe>
       </div>
-      <div class="contact-form">
+      <!-- <div class="contact-form">
         <form action="./contactme.php" method="POST">
           <input
             type="text"
@@ -437,7 +436,7 @@
             class="contact-form-btn"
           />
         </form>
-      </div>
+      </div> -->
     </div>
 
     <section class="faq">
@@ -453,34 +452,31 @@
             </div>
             <div class="accordion-body">
               <p>
-                To get a better idea of the cost of what you want to build, give
-                us a quick phone call. We’ll ask you a few questions about the
-                nature of the site, what sort of interactivity the site will
-                have, your graphic design needs, etc. Then we’ll be able to give
-                you a ballpark figure. If you’re still interested, we’ll come to
-                your place of business and come up with a firm quote.
+                To get a better idea of the cost of where you want to go, give
+                us a quick phone call. We’ll ask you a few questions . Then
+                we’ll be able to give you a ballpark figure. If you’re still
+                interested, we can get connected at our office at Sukedhara.
               </p>
             </div>
           </div>
           <div class="accordion">
             <div class="accordion-header">
               <span>+</span>
-              <h3>How long it takes to design?</h3>
+              <h3>How long it takes to get visa?</h3>
             </div>
             <div class="accordion-body">
               <p>
-                The time limit of any assignment is normally dictated by the
-                client. If you have any time limit in mind we will attempt to
-                assemble it for you. The main general delay in the making of a
-                website is waiting for the content of the pages to be sent to us
-                by the client.
+                Depends upon multiple of factors like documents you already have
+                beforehand, country you want to go to , category of work you
+                want to perform , etc. We will do our best to make the process
+                easy and fast as possible for you.
               </p>
             </div>
           </div>
           <div class="accordion">
             <div class="accordion-header">
               <span>+</span>
-              <h3>How do I associate with IT Company?</h3>
+              <h3>Question?</h3>
             </div>
             <div class="accordion-body">
               <p>
@@ -495,7 +491,7 @@
           <div class="accordion">
             <div class="accordion-header">
               <span>+</span>
-              <h3>Can you help my current site look more professional?</h3>
+              <h3>Question?</h3>
             </div>
             <div class="accordion-body">
               <p>
@@ -511,12 +507,11 @@
             </div>
             <div class="accordion-body">
               <p>
-                For most projects, equal payments are made at the start, midway,
-                and the end of the project, but we can work with you to set up a
+                For most people,payments are made at the start, midway, and the
+                end of the project, but we can work with you to set up a
                 schedule that meets your needs. We understand that this is a big
                 investment and want to help you budget for the expense in
-                whatever way possible. We accept checks, PayPal, and all major
-                credit cards.
+                whatever way possible.
               </p>
             </div>
           </div>
@@ -524,13 +519,17 @@
       </div>
       <!-- download button added  -->
       <div class="btn">
-          <a href="/images/pandahumanresource.pdf" download class="btn btn-primary">Download Brochure
-            <i class="fa fa-download"></i>
-          </a>
+        <a
+          href="/images/pandahumanresource.pdf"
+          download
+          class="btn btn-primary"
+          >Download Brochure
+          <i class="fa fa-download"></i>
+        </a>
       </div>
     </section>
 
-<!-- footer started -->
+    <!-- footer started -->
     <div class="footer">
       <div class="footer-top">
         <div class="container">
@@ -547,7 +546,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#service">Our services</a>
+                  <a href="#service">Chairman</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
@@ -565,14 +564,14 @@
               <ul>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#portfolio">Portfolio</a>
+                  <a href="#portfolio">Markeing Manager</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i> <a href="#team">Team</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="careers.html">Career</a>
+                  <a href="careers.html">Categories</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
@@ -590,11 +589,10 @@
             >
               <h4>Contact Us</h4>
               <p>
-                1300 Center Avenue<br />
-                Fresno, California<br />
-                United States <br />
-                <strong>Phone:</strong> +123-456-7890<br />
-                <strong>Email:</strong> info@example.com<br />
+                Sukedhara, Kathmandu<br />
+                Nepal <br />
+                <strong>Phone:</strong> +01-xxxxxxx<br />
+                <strong>Email:</strong> info@sunrise-hr-solution.com<br />
               </p>
 
               <div class="social-links">
@@ -610,26 +608,15 @@
                 <a href="https://www.instagram.com/"
                   ><i class="ion-logo-instagram"></i
                 ></a>
-                <a
-                  href="https://accounts.google.com/servicelogin/signinchooser?flowName=GlifWebSignIn&flowEntry=ServiceLogin"
-                  ><i class="ion-logo-googleplus"></i
-                ></a>
               </div>
             </div>
 
             <div class="col-lg-3 col-md-6 footer-newsletter">
-              <h4>Subscription</h4>
+              <h4>Some words</h4>
               <p>
                 With Our Skills Put Together, You Get An Ensemble Capable Of
-                Doing Anything And Everything Your Brand Needs. Subscribe Here
-                To Get Our Latest Updates.
+                Doing Anything And Everything You Need.
               </p>
-              <form action="" method="post">
-                <input type="email" name="email" /><input
-                  type="submit"
-                  value="Subscribe"
-                />
-              </form>
             </div>
           </div>
         </div>
