commit by shibu

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
           <div class="col-lg-4 col-lg-12">
             <div class="item">
               <div class="testimonial-img">
-                <img src="./images/chairman.jpg" alt="Chairman image" />
+                <img src="./images/chairman.jpg" alt="Chairman image" title="Raj Kumar Lamsal"/>
               </div>
               <br />
               <h6>Mr. Raj Kumar Lamsal</h6>
               <h3>Chairman</h3>
-              <p>
+              <p style="text-align: justify;">
                 It gives me immense pleasure to introduce my company, Sunrise HR
                 Solution Pvt. Ltd., as one of the leading manpower company
                 amongst many in Nepal. From ensuring our clients’ satisfaction
@@ -183,13 +183,14 @@
                 <img
                   src="./images/manager2.jpg"
                   alt="International Marketing Manager image"
+                  title="Souraj Rai"
                 />
               </div>
               <br />
               <h6>Mr. Souraj Rai</h6>
               <h3>International Marketing Manager</h3>
 
-              <p>
+              <p style="text-align: justify;">
                 It has been our aim at Sunrise HR Solution to provide
                 employement oppurtunity to the Nepalese in world class comapnies
                 that have partenered and trusted our services. I feel great joy
@@ -280,14 +281,13 @@
           </p>
         </div>
         <div class="owl-carousel clients-carousel">
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
-          <img src="./images/image.png" alt="Client Logo" />
+          <img src="./images/client-logo/1.png" alt="Client Logo" />
+          <img src="./images/client-logo/2.png" alt="Client Logo" />
+          <img src="./images/client-logo/3.png" alt="Client Logo" />
+          <img src="./images/client-logo/4.png" alt="Client Logo" />
+          <img src="./images/client-logo/5.png" alt="Client Logo" />
+          <img src="./images/client-logo/6.jpg" alt="Client Logo" />
+          <img src="./images/client-logo/7.png" alt="Client Logo" />
         </div>
       </div>
     </div>
