--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           </div>
           <div class="info">
             <h3>Mr. Souraj Rai</h3>
-            <span>Internaional Maeketing Manager</span>
+            <span>Internaional Marketing Manager</span>
             <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -592,7 +592,7 @@
                 Sukedhara, Kathmandu<br />
                 Nepal <br />
                 <strong>Phone:</strong> +01-xxxxxxx<br />
-                <strong>Email:</strong> info@sunrise-hr-solution.com<br />
+                <strong>Email:</strong> info@sunrise-hr-solution.com.np<br />
               </p>
 
               <div class="social-links">
