--- a/index.html
+++ b/index.html
@@ -105,12 +105,16 @@
           <div class="col-lg-4 col-lg-12">
             <div class="item">
               <div class="testimonial-img">
-                <img src="./images/chairman.jpg" alt="Chairman image" title="Raj Kumar Lamsal"/>
+                <img
+                  src="./images/chairman.jpg"
+                  alt="Chairman image"
+                  title="Raj Kumar Lamsal"
+                />
               </div>
               <br />
               <h6>Mr. Raj Kumar Lamsal</h6>
               <h3>Chairman</h3>
-              <p style="text-align: justify;">
+              <p style="text-align: justify">
                 It gives me immense pleasure to introduce my company, Sunrise HR
                 Solution Pvt. Ltd., as one of the leading manpower company
                 amongst many in Nepal. From ensuring our clients’ satisfaction
@@ -190,13 +194,14 @@
               <h6>Mr. Souraj Rai</h6>
               <h3>International Marketing Manager</h3>
 
-              <p style="text-align: justify;">
+              <p style="text-align: justify">
                 It has been our aim at Sunrise HR Solution to provide
                 employement oppurtunity to the Nepalese in world class comapnies
                 that have partenered and trusted our services. I feel great joy
                 to be part of this process of uplifting the Nepalese society and
                 be a facilitator for the Nepali dream to work in a great
-                international company.<br />
+                international company. I have been actively participating in the
+                field of marketing for the last eight years.<br />
               </p>
             </div>
           </div>
@@ -476,27 +481,27 @@
           <div class="accordion">
             <div class="accordion-header">
               <span>+</span>
-              <h3>Question?</h3>
+              <h3>How to start the visa process?</h3>
             </div>
             <div class="accordion-body">
               <p>
-                The process begins when you contact us with your requirements.
-                We analyze your requirements and respond to you. On the basis of
-                the further discussion, you can choose an engagement model that
-                suits you the best. After that, we begin the process of
-                development.
+                You need to bring your original passport , SLC (SEE) pass
+                certificate , your resume (CV) with details of work experience,
+                two passport size pictures and your police clearance report. If
+                you need any assistance with the documents feel free to contact
+                us.
               </p>
             </div>
           </div>
           <div class="accordion">
             <div class="accordion-header">
               <span>+</span>
-              <h3>Question?</h3>
+              <h3>Which contries do we send for manpower?</h3>
             </div>
             <div class="accordion-body">
               <p>
-                Yes. Give us your requirements and we have experienced expertise
-                to help you give a new professional look that really wonders!
+                We supply manpower from Nepal to Crotia , Bossnia , Germany ,
+                Dubai , Quatar , Servia and Albania.
               </p>
             </div>
           </div>
