categories content added

--- a/careers.html
+++ b/careers.html
@@ -79,50 +79,110 @@
                 type="radio"
                 checked="checked"
                 name="status"
-                value="Web Designer"
+                value="Electrician"
               />
               <span class="checkmark"></span>
-              Web Designer
+              Electrician
             </label>
             <label class="radio">
               <input
                 class="radio-two"
                 type="radio"
                 name="status"
-                value="Web Developer"
+                value="Excavator Operator"
               />
               <span class="checkmark"></span>
-              Web Developer
+              Excavator Operator
             </label>
             <label class="radio">
               <input
                 class="radio-three"
                 type="radio"
                 name="status"
-                value="Mobile App Designer"
+                value="Truck Driver"
               />
               <span class="checkmark"></span>
-              Mobile App Designer
+              Truck Driver
             </label>
             <label class="radio">
               <input
                 class="radio-four"
                 type="radio"
                 name="status"
-                value="Mobile App Developer"
+                value="Kitchen Helper"
               />
               <span class="checkmark"></span>
-              Mobile App Developer
+              Kitchen Helper
             </label>
             <label class="radio">
               <input
                 class="radio-five"
                 type="radio"
                 name="status"
-                value="Digital Marketer"
+                value="Cleaner"
               />
               <span class="checkmark"></span>
-              Digital Marketer
+              Cleaner
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="House Keeping"
+              />
+              <span class="checkmark"></span>
+              House Keeping
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="Taxi Driver"
+              />
+              <span class="checkmark"></span>
+              Taxi Driver
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="Cook"
+              />
+              <span class="checkmark"></span>
+              Cook
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="Construction"
+              />
+              <span class="checkmark"></span>
+              Construction
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="Baker"
+              />
+              <span class="checkmark"></span>
+              Baker
+            </label>
+            <label class="radio">
+              <input
+                class="radio-five"
+                type="radio"
+                name="status"
+                value="Waiter / Waitress"
+              />
+              <span class="checkmark"></span>
+              Waiter / Waitress
             </label>
           </div>
         </form>
