--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             as deliver a wide range of related professional services. We are
             providing world-class service to our clients.
           </p >
-          <a href="#" id="chairman"><button class="btn">Read More</button></a>
+          <!-- <a href="#" id="chairman"><button class="btn">Read More</button></a> -->
         </div>
       </div>
     </div>
@@ -189,7 +189,7 @@
       <div class="container">
         <div class="row">
           <div class="section-head-1 col-sm-12" style="text-align: center">
-            <h4 style="margin-top: -5rem" id="portfolio">
+            <h4 style="margin-top: -5rem" id="portfolio2">
               <span>Words</span> From our International Marketing Manager
             </h4>
           </div>
@@ -567,7 +567,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#service">Chairman</a>
+                  <a href="#portfolio">Chairman</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
@@ -585,7 +585,7 @@
               <ul>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#portfolio">Markeing Manager</a>
+                  <a href="#portfolio2">Marketing Manager</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i> <a href="#team">Team</a>
