--- a/careers.html
+++ b/careers.html
@@ -202,19 +202,19 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#about">About us</a>
+                  <a href="index.html#about">About us</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#service">Chairman</a>
+                  <a href="index.html#portfolio">Chairman</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#">Terms & condition</a>
+                  <a href="index.html#">Terms & condition</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#">Privacy policy</a>
+                  <a href="index.html#">Privacy policy</a>
                 </li>
               </ul>
             </div>
@@ -224,10 +224,11 @@
               <ul>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#portfolio">Markeing Manager</a>
+                  <a href="index.html#portfolio2">Markeing Manager</a>
                 </li>
                 <li>
-                  <i class="ion-ios-arrow-forward"></i> <a href="#team">Team</a>
+                  <i class="ion-ios-arrow-forward"></i>
+                  <a href="index.html#team">Team</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
@@ -235,7 +236,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="#contact">Contact</a>
+                  <a href="index.html#contact">Contact</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i> <a href="#faq">FAQ</a>
@@ -252,7 +253,7 @@
                 Sukedhara, Kathmandu<br />
                 Nepal <br />
                 <strong>Phone:</strong> +01-xxxxxxx<br />
-                <strong>Email:</strong> info@sunrise-hr-solution.com<br />
+                <strong>Email:</strong> info@sunrise-hr-solution.com.np<br />
               </p>
 
               <div class="social-links">
