removed personal social media links of team

--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
           <div class="info">
             <h3>Mr. Raj Kumar Lamsal</h3>
             <span>Chairman</span>
-            <div class="icons">
+            <!-- <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -357,12 +357,12 @@
           <div class="info">
             <h3>Mr. Souraj Rai</h3>
             <span>Internaional Marketing Manager</span>
-            <div class="icons">
+            <!-- <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -377,12 +377,12 @@
           <div class="info">
             <h3>John Doe</h3>
             <span>Technical Officer</span>
-            <div class="icons">
+            <!-- <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -397,12 +397,12 @@
           <div class="info">
             <h3>Rose Matthews</h3>
             <span>Receptionist</span>
-            <div class="icons">
+            <!-- <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
               <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
               <a href="https://www.linkedin.com/" class="fab fa-linkedin"></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
