--- a/careers.html
+++ b/careers.html
@@ -66,126 +66,23 @@
     </section>
     <div class="career">
       <div class="career-form">
-        <form
-          action="./careers.php"
-          method="POST"
-          enctype="multipart/form-data"
-        >
-          <div class="radio-class">
-            <h2 class="name">Categories we serve</h2>
-            <label class="radio">
-              <input
-                class="radio-one"
-                type="radio"
-                checked="checked"
-                name="status"
-                value="Electrician"
-              />
-              <span class="checkmark"></span>
-              Electrician
-            </label>
-            <label class="radio">
-              <input
-                class="radio-two"
-                type="radio"
-                name="status"
-                value="Excavator Operator"
-              />
-              <span class="checkmark"></span>
-              Excavator Operator
-            </label>
-            <label class="radio">
-              <input
-                class="radio-three"
-                type="radio"
-                name="status"
-                value="Truck Driver"
-              />
-              <span class="checkmark"></span>
-              Truck Driver
-            </label>
-            <label class="radio">
-              <input
-                class="radio-four"
-                type="radio"
-                name="status"
-                value="Kitchen Helper"
-              />
-              <span class="checkmark"></span>
-              Kitchen Helper
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Cleaner"
-              />
-              <span class="checkmark"></span>
-              Cleaner
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="House Keeping"
-              />
-              <span class="checkmark"></span>
-              House Keeping
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Taxi Driver"
-              />
-              <span class="checkmark"></span>
-              Taxi Driver
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Cook"
-              />
-              <span class="checkmark"></span>
-              Cook
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Construction"
-              />
-              <span class="checkmark"></span>
-              Construction
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Baker"
-              />
-              <span class="checkmark"></span>
-              Baker
-            </label>
-            <label class="radio">
-              <input
-                class="radio-five"
-                type="radio"
-                name="status"
-                value="Waiter / Waitress"
-              />
-              <span class="checkmark"></span>
-              Waiter / Waitress
-            </label>
+        <div class="radio-class">
+          <br />
+          <h2 class="name">Categories we serve:</h2>
+          <br />
+          <div class="categories_name">
+            <h3>1. Electrician</h3>
+            <h3>2. Excavator Operator</h3>
+            <h3>3. Truck Driver</h3>
+            <h3>4. Kitchen Helper</h3>
+            <h3>5. Cleaner</h3>
+            <h3>6. House Keeping</h3>
+            <h3>7. Cook</h3>
+            <h3>8. Construction</h3>
+            <h3>9. Baker</h3>
+            <h3>10. Waiter / Waitress</h3>
           </div>
-        </form>
+        </div>
       </div>
     </div>
 
