QA changes and remove uncecessary images

--- a/chairman.html
+++ b/chairman.html
@@ -60,7 +60,7 @@
         <ul>
           <li><a href="index.html#home">home</a></li>
           <li><a href="index.html#about">about</a></li>
-          <li><a href="index.html#chairman">chairman</a></li>
+          <li><a href="#">chairman</a></li>
           <li><a href="index.html#manager">manager </a></li>
           <li><a href="index.html#team">team</a></li>
           <li><a href="careers.html">categories</a></li>
@@ -150,7 +150,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="index.html#portfolio">Chairman</a>
+                  <a href="#">Chairman</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
