--- a/marketing.html
+++ b/marketing.html
@@ -60,8 +60,8 @@
         <ul>
           <li><a href="index.html#home">home</a></li>
           <li><a href="index.html#about">about</a></li>
-          <li><a href="index.html#chairman">chairman</a></li>
-          <li><a href="index.html#manager">manager </a></li>
+          <li><a href="index.html#portfolio">chairman</a></li>
+          <li><a href="#">manager </a></li>
           <li><a href="index.html#team">team</a></li>
           <li><a href="careers.html">categories</a></li>
           <li><a href="index.html#contact">contact</a></li>
@@ -159,7 +159,7 @@
               <ul>
                 <li>
                   <i class="ion-ios-arrow-forward"></i>
-                  <a href="index.html#portfolio2">Markeing Manager</a>
+                  <a href="#">Markeing Manager</a>
                 </li>
                 <li>
                   <i class="ion-ios-arrow-forward"></i> <a href="index.html#team">Team</a>
