--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunrise HR Solution</title>
-
+    <link rel="icon" type="image/x-icon" href="./images/Logo.png">
     <!-- external css link inserted -->
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -60,7 +60,7 @@
         <ul>
           <li><a href="#home">home</a></li>
           <li><a href="#about">about</a></li>
-          <li><a href="#chairman">chairman</a></li>
+          <li><a href="#portfolio">chairman</a></li>
           <li><a href="#manager">manager</a></li>
           <li><a href="#team">team</a></li>
           <li><a href="careers.html">categories</a></li>
