--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="custom-image col-sm-12 col-md-12 col-lg-4">
       <div class="custom-outline">
         <div class="testimonial-img" >
-          <img class="col-sm-12 "
+          <img class="col-sm-12 " width ="100px" height = "150px"
             src="./images/chairman.jpg"
             alt="Chairman image"
             title="Mr.Raj Kumar Lamsal"
@@ -199,7 +199,7 @@
             <div class="custom-image col-sm-12 col-md-12 col-lg-5">
             <div class="custom-outline">
               <div class="testimonial-img" >
-                <img class="col-sm-12 "
+                <img class="col-sm-12 " width ="100px" height = "150px"
                   src="./images/manager2.jpg"
                   alt="Chairman image"
                   title="Mr.Souraj Rai"
