Typos and added landline number

--- a/careers.html
+++ b/careers.html
@@ -149,7 +149,7 @@
               <p>
                 Sukedhara, Kathmandu<br />
                 Nepal <br />
-                <strong>Phone:</strong> +01-xxxxxxx<br />
+                <strong>Phone:</strong> +01-5907848<br />
                 <strong>Email:</strong> info@sunrise-hr-solution.com.np<br />
               </p>
 
