--- a/chairman.html
+++ b/chairman.html
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="section-head-1 col-sm-12" style="text-align: center">
               <h4 style="margin-top: -5rem" id="portfolio">
-                <span>Words</span> From our International Marketing Manager
+                <span>Words</span> From our Chairman
               </h4>
             </div>
       <div class=" custom-flex ">
@@ -195,7 +195,7 @@
               <p>
                 Sukedhara, Kathmandu<br />
                 Nepal <br />
-                <strong>Phone:</strong> +01-xxxxxxx<br />
+                <strong>Phone:</strong> +01-5907848<br />
                 <strong>Email:</strong> info@sunrise-hr-solution.com.np<br />
               </p>
 
