chairman and manager title space fixed

--- a/chairman.html
+++ b/chairman.html
@@ -95,7 +95,7 @@
         </div>
         </div>
         <div class="custom-paragraph col-sm-12 col-md-12 col-lg-7 ">
-          <h3>Mr. Raj Kumar Lamsal</h3>
+          <h3 class="mt-5">Mr. Raj Kumar Lamsal</h3>
           <h3 style="color: green;">Chairman</h3>
   
           <p style="text-align: justify;font-size: 18px;">
