--- a/marketing.html
+++ b/marketing.html
@@ -96,7 +96,7 @@
               </div>
               </div>
               <div class="custom-paragraph col-sm-12 col-md-12 col-lg-7">
-                <h3>Mr. Souraj Rai</h3>
+                <h3 class="mt-5">Mr. Souraj Rai</h3>
                 <h3 style="color: green;">International Marketing Manager</h3>
   
                 <p style="text-align: justify;font-size: 18px;">
