shibu added some changes

--- a/marketing.html
+++ b/marketing.html
@@ -88,7 +88,7 @@
               <div class="custom-outline">
                 <div class="testimonial-img" >
                   <img
-                    src="./images/manager2.jpg"
+                    src="./images/sauraj rai.jpg"
                     alt="Chairman image"
                     title="Mr.Souraj Rai"
                   />
