--- a/chairman.html
+++ b/chairman.html
@@ -87,7 +87,7 @@
         <div class="custom-outline">
           <div class="testimonial-img" >
             <img
-              src="./images/chairman.jpg"
+              src="./images/chairman1.jpg"
               alt="Chairman image"
               title="Mr.Raj Kumar Lamsal"
             />
