--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="custom-image col-sm-12 col-md-12 col-lg-4">
               <div class="custom-outline">
                 <div class="testimonial-img">
-                  <img class="col-sm-12 " width="100px" height="auto" src="./images/chairman.jpg" alt="Chairman image"
+                  <img class="col-sm-12 " width="100px" height="auto" src="./images/chairman1.jpg" alt="Chairman image"
                     title="Mr.Raj Kumar Lamsal" />
                 </div>
               </div>
@@ -304,7 +304,7 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="./images/chairman.jpg" alt="chairman" />
+          <img src="./images/chairman1.jpg" alt="chairman" />
         </div>
         <div class="info">
           <h3>Mr. Raj Kumar Lamsal</h3>
