adding new form and picture

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,12 @@
         label {
             font-size: 15px;
         }
-        .custom-icon p{
+
+        .custom-icon p {
             font-size: 12px;
         }
-        .btn-send:hover a{
+
+        .btn-send:hover a {
             color: #ffffff;
         }
     </style>
@@ -94,60 +96,24 @@
         <!--Section heading-->
         <h2 class="h1-responsive font-weight-bold text-center my-4">We Recieve Your Message</h2>
         <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5" style="font-size: 15px;">Do you have any questions? Please do not hesitate to contact us
+        <p class="text-center w-responsive mx-auto mb-5" style="font-size: 15px;">Do you have any questions? Please do
+            not hesitate to contact us
             directly. Our team will come back to you within
             a matter of hours to help you.</p>
 
         <div class="row">
 
             <div class="col-md-9 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-                    <div class="row">
-
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control">
-                                <label for="name" class="">Your name</label>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="email" name="email" class="form-control">
-                                <label for="email" class="">Your email</label>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control">
-                                <label for="subject" class="">Subject</label>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-md-12">
-
-                            <div class="md-form">
-                                <textarea type="text" id="message" name="message" rows="2"
-                                    class="form-control md-textarea"></textarea>
-                                <label for="message">Your message</label>
-                            </div>
-
-                        </div>
-                    </div>
-
+                <form action="./contactme.php" method="POST">
+                    <input type="text" name="name" placeholder="Name" class="contact-form-txt" required />
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number"
+                        maxlength="10" class="contact-form-phone" />
+                    <input type="email" name="email" placeholder="Email" class="contact-form-email"
+                        style="text-transform: lowercase;" required />
+                    <textarea placeholder="Your Message" name="message" class="contact-form-txtarea"
+                        required></textarea>
+                    <input type="submit" value="Submit" name="submit" class="contact-form-btn" />
                 </form>
-
-                <div class="text-center text-md-left">
-                    <a class="btn btn-primary btn-send" onclick="document.getElementById('contact-form').submit();">Send</a>
-                </div>
                 <div class="status"></div>
             </div>
 
@@ -162,7 +128,7 @@
                     </li>
 
                     <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>info@sunrise-hr-solution.com.np</p>
+                        <p style="text-transform: lowercase;">info@sunrise-hr-solution.com.np</p>
                     </li>
                 </ul>
             </div>
