--- a/index.html
+++ b/index.html
@@ -338,11 +338,11 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="./images/pexels-hussein-altameemi-2776353.jpg" alt="Team member 1" />
+          <img src="./images/manager.jpg" alt="Team member 1" />
         </div>
         <div class="info">
           <h3>John Doe</h3>
-          <span>Technical Officer</span>
+          <span>Manager</span>
           <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
               <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -352,7 +352,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="card">
         <div class="image">
           <img src="./images/pexels-andrea-piacquadio-745136.jpg" alt="Team member 1" />
@@ -368,7 +368,7 @@
             </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
 
 
