--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           <img src="./images/manager.jpg" alt="Team member 1" />
         </div>
         <div class="info">
-          <h3>John Doe</h3>
+          <h3>Chandra Shrestha</h3>
           <span>Manager</span>
           <div class="icons">
               <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
