--- a/index.html
+++ b/index.html
@@ -468,13 +468,13 @@
 
     <div class="col-lg-6 col-sm-12 col-md-10 p-3 custom-map">
       <div class="contact-form">
-        <form action="#" method="POST">
+        <form action="https://nocodeform.io/f/63a6ba757a8c8fd0563621dc" method="POST">
           <input type="text" name="name" placeholder="Name" class="contact-form-txt" required />
-          <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number" maxlength="10"
-            class="contact-form-phone" />
+          <!-- <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" required placeholder="Contact number" maxlength="10"
+            class="contact-form-phone" /> -->
           <input type="email" name="email" placeholder="Email" class="contact-form-email"  style="text-transform: lowercase;" required />
           <textarea placeholder="Your Message" name="message" class="contact-form-txtarea" required></textarea>
-          <input type="reset" value="Submit" name="submit" class="contact-form-btn" />
+          <input type="submit" value="Submit" name="submit" class="contact-form-btn" />
         </form>
     </div>
   </div>
