testimonial error corrected

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <p style="font-size: 2rem">See what people have to say about us</p>
       </div>
 
-      <div class="owl-carousel testimonials-carousel">
+      <div class="owl-carousel clients-carousel ">
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
             <img src="./images/testimonial-1.jpg" alt="Testimonial image" />
