--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="owl-carousel testimonials-carousel ">
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
-            <img src="./images/testimonial-1.jpg" alt="Testimonial image" />
+            <img src="./images/test.jpg" alt="Testimonial image" />
           </div>
           <div class="testimonial-text">
             <h3>Person-1</h3>
@@ -226,7 +226,7 @@
         </div>
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
-            <img src="./images/testimonial-2.jpg" alt="Testimonial image" />
+            <img src="./images/test.jpg" alt="Testimonial image" />
           </div>
           <div class="testimonial-text">
             <h3>Person-2</h3>
@@ -236,7 +236,7 @@
         </div>
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
-            <img src="./images/testimonial-3.jpg" alt="Testimonial image" />
+            <img src="./images/test.jpg" alt="Testimonial image" />
           </div>
           <div class="testimonial-text">
             <h3>Person-3</h3>
@@ -246,7 +246,7 @@
         </div>
         <div class="testimonial-item row align-items-center">
           <div class="testimonial-img">
-            <img src="./images/testimonial-4.jpg" alt="Testimonial image" />
+            <img src="./images/test.jpg" alt="Testimonial image" />
           </div>
           <div class="testimonial-text">
             <h3>Person-4</h3>
