adding new brochure and fixing the manager image

--- a/about-us.html
+++ b/about-us.html
@@ -92,7 +92,7 @@
 
     <!-- download button added  -->
     <div class="btn d-flex justify-content-center">
-        <a href="/images/sunrisehrsolution.pdf" download class="btn btn-primary">Download Brochure
+        <a href="/images/Sunrise-Hr-Solution Brochure.pdf" download class="btn btn-primary">Download Brochure
             <i class="fa fa-download"></i>
         </a>
     </div>
