--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     </div>
     <!-- download button added  -->
     <div class="btn">
-      <a href="/images/sunrisehrsolution.pdf" download class="btn btn-primary">Download Brochure
+      <a href="/images/Sunrise-Hr-Solution Brochure.pdf" download class="btn btn-primary">Download Brochure
         <i class="fa fa-download"></i>
       </a>
     </div>
