created by added

--- a/index.html
+++ b/index.html
@@ -563,7 +563,10 @@
       <div class="row align-items-center">
         <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem">
           Copyright &copy; 2022 Sunrise HR Solution Pvt Ltd. All Rights
-          Reserved.
+          Reserved.<br/> Created by
+          <a href="http://rohanchhetry.com.np" style="color: #fff" target="_blank" rel="noopener noreferrer">Rohan Chhetry</a>,
+          <a href="#" style="color: #fff" target="_blank" rel="noopener noreferrer">Raj Maharjan</a> &
+          <a href="http://shivalimbu.com.np" style="color: #fff" target="_blank" rel="noopener noreferrer">Shiva Kumar Limbu</a>,
         </div>
       </div>
     </div>
